# mailchimp-subscribe

./: Main.hs  README.md  app.json  cabal.config  mailchimp-subscribe.cabal
.halcyon/: constraints
