name:               mailchimp-subscribe
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable mailchimp-subscribe
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      aeson,
                      http-client,
                      http-client-tls,
                      http-types,
                      reflection,
                      scotty,
                      text,
                      transformers,
                      wai-extra
